--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bot_toast: ^4.0.3
+  freezed_annotation: ^0.14.2
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.0.6
+  freezed: ^0.14.2
+  json_serializable: ^4.1.4
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
