--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   dynamic_color: ^1.5.4
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  dio: ^4.0.6
   cupertino_icons: ^1.0.2
   bot_toast: ^4.0.3
   freezed_annotation: ^0.14.2
@@ -46,11 +44,6 @@ dev_dependencies:
   build_runner: ^2.0.6
   freezed: ^0.14.2
   json_serializable: ^4.1.4
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
