--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   dynamic_color: ^1.5.4
-  dio: ^4.0.6
   cupertino_icons: ^1.0.2
   bot_toast: ^4.0.3
   freezed_annotation: ^2.1.0
@@ -42,9 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.6
-  freezed: ^0.14.2
-  json_serializable: ^4.1.4
+  flutter_bloc: ^8.1.1
   flutter_lints: ^2.0.0
   freezed: ^2.1.0+1
   build_runner: ^2.2.1
