--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,24 +30,26 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.0
+  bot_toast: ^4.0.3
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  dynamic_color: ^1.5.4
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  dynamic_color: ^1.5.4
-  cupertino_icons: ^1.0.2
-  bot_toast: ^4.0.3
-  freezed_annotation: ^0.14.2
-  json_annotation: ^4.0.1
-  equatable: ^2.0.5
-  bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  flutter_secure_storage: ^6.0.0
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
+  reactive_forms: ^14.1.0
 
 dev_dependencies:
+  build_runner: ^2.2.0
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-  flutter_bloc: ^8.1.1
-  flutter_lints: ^2.0.0
-
+  freezed: ^2.1.0+1
+  json_serializable: ^6.3.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
