--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "fizyo_app_frontend",
-    "short_name": "fizyo_app_frontend",
+    "name": "flutter_application_1",
+    "short_name": "flutter_application_1",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
