--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.6.0
   reactive_forms: ^14.1.0
   font_awesome_flutter: ^9.0.0
+  scrollable_positioned_list: ^0.3.4
 
 dev_dependencies:
   build_runner: ^2.2.0
