--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   reactive_forms: ^14.1.0
   font_awesome_flutter: ^9.0.0
   scrollable_positioned_list: ^0.3.4
+  reactive_range_slider: ^0.5.0
 
 dev_dependencies:
   build_runner: ^2.2.0
