--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
-  reactive_forms: ^14.1.0
   font_awesome_flutter: ^9.0.0
   scrollable_positioned_list: ^0.3.4
   reactive_range_slider: ^0.5.0
+  reactive_forms: ^14.1.0
+  email_auth: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.2.0
