--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   scrollable_positioned_list: ^0.3.4
   reactive_range_slider: ^0.5.0
+  selectable_container: ^1.0.6
+  flutter_multi_select_items: ^0.4.2
 
 dev_dependencies:
   build_runner: ^2.2.0
