--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   reactive_range_slider: ^0.5.0
   reactive_forms: ^14.1.0
   email_auth: ^1.0.0
+  file_picker: ^5.2.0+1
 
 dev_dependencies:
   build_runner: ^2.2.0
