--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   reactive_forms: ^14.1.0
   email_auth: ^1.0.0
   file_picker: ^5.2.0+1
+  open_file: ^2.1.1
+  flutter_email_sender: ^5.1.0
 
 dev_dependencies:
   build_runner: ^2.2.0
